--- a/package.json
+++ b/package.json
@@ -1,19 +1,38 @@
 {
-  "name": "react-dnd-html5-with-touch-backend",
+  "name": "react-dnd-html5-touch-backend",
   "version": "1.0.0",
-  "description": "HTML5 backend for React DnD with touch support",
-  "main": "index.js",
+  "description": "HTML5 backend for React DnD with touch support. Wraps react-dnd-html5-backend",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel/register --recursive"
+    "compile": "babel -d dist/ src/",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/Neilos/react-dnd-html5-with-touch-backend.git"
   },
-  "author": "\"Neil Atkinson (http://github.com/Neilos)",
+  "author": "Neil Atkinson <neil@bluespot.io>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Neilos/react-dnd-html5-with-touch-backend/issues"
   },
-  "homepage": "https://github.com/Neilos/react-dnd-html5-with-touch-backend#readme"
+  "license": "MIT",
+  "files": [
+    "dist/",
+    "LICENSE",
+    "README.md"
+  ],
+  "homepage": "https://github.com/Neilos/react-dnd-html5-with-touch-backend#readme",
+  "devDependencies": {
+    "babel": "^5.8.23",
+    "babel-loader": "^5.3.2",
+    "webpack": "^2.1.0-beta"
+  },
+  "dependencies": {
+    "react-dnd-html5-backend": "^2.1.2"
+  },
+  "peerDependencies": {
+    "react-dnd": "^2.0.0",
+    "touch-dnd-custom-events": "^1.0.0"
+  }
 }
