--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dnd-html5-touch-backend",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "HTML5 backend for React DnD with touch support. Wraps react-dnd-html5-backend",
   "main": "dist/index.js",
   "scripts": {
@@ -29,7 +29,9 @@
     "webpack": "^2.1.0-beta"
   },
   "dependencies": {
-    "react-dnd-html5-backend": "^2.1.2",
+    "react-dnd-html5-backend": "^2.1.2"
+  },
+  "peerDependencies": {
     "touch-dnd-custom-events": "^1.1.0"
   }
 }
