--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dnd-html5-touch-backend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "HTML5 backend for React DnD with touch support. Wraps react-dnd-html5-backend",
   "main": "dist/index.js",
   "scripts": {
@@ -29,10 +29,7 @@
     "webpack": "^2.1.0-beta"
   },
   "dependencies": {
-    "react-dnd-html5-backend": "^2.1.2"
-  },
-  "peerDependencies": {
-    "react-dnd": "^2.0.0",
-    "touch-dnd-custom-events": "^1.0.0"
+    "react-dnd-html5-backend": "^2.1.2",
+    "touch-dnd-custom-events": "^1.1.0"
   }
 }
