--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-dnd-html5-touch-backend",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "HTML5 backend for React DnD with touch support. Wraps react-dnd-html5-backend",
   "main": "dist/index.js",
   "scripts": {
     "compile": "babel -d dist/ src/",
+    "lint": "./node_modules/.bin/eslint ./src",
     "prepublish": "npm run compile"
   },
   "repository": {
@@ -29,6 +30,7 @@
     "webpack": "^2.1.0-beta"
   },
   "dependencies": {
+    "eslint": "^3.8.1",
     "react-dnd-html5-backend": "^2.1.2",
     "touch-dnd-custom-events": "^1.2.0"
   }
